oxiplate-derive/tests/broken/not-alone.stderr
error: Expected an expression after prefix operator
 --> tests/broken/not-alone.rs:4:31
  |
4 | #[oxiplate_inline(r##"{% if ! %}"##)]
  |                               ^^
